--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <script src="https://cdn.jsdelivr.net/npm/ar.js/aframe/build/aframe-ar.min.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <a-scene embedded arjs>
+  <!-- Added arjs configuration to enable debugging and plane detection -->
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; planeDetection: true;">
     <!-- Ground Plane for Flat Surface Detection -->
     <a-plane 
       position="0 0 0" 
@@ -41,8 +42,8 @@
       animation="property: position; to: 1.5 0.4 1.5; loop: true; dur: 10000">
     </a-sphere>
 
-    <!-- AR Camera -->
-    <a-camera position="0 0 0" look-controls="enabled"></a-camera>
+    <!-- AR Camera: Removed the 'enabled' attribute for look-controls -->
+    <a-camera position="0 0 0" look-controls></a-camera>
   </a-scene>
 </body>
 </html>
