--- a/index.html
+++ b/index.html
@@ -6,44 +6,36 @@
   <script src="https://cdn.jsdelivr.net/npm/ar.js/aframe/build/aframe-ar.min.js"></script>
 </head>
 <body style="margin: 0; overflow: hidden;">
-  <!-- Added arjs configuration to enable debugging and plane detection -->
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false; planeDetection: true;">
-    <!-- Ground Plane for Flat Surface Detection -->
-    <a-plane 
-      position="0 0 0" 
-      rotation="-90 0 0" 
-      width="5" 
-      height="5" 
-      color="#CCCCCC" 
-      shadow="receive: true">
-    </a-plane>
+  <a-scene embedded arjs>
+    <!-- Marker for the Sun -->
+    <a-marker preset="hiro">
+      <!-- Sun -->
+      <a-sphere
+        color="yellow"
+        radius="0.5"
+        position="0 0.5 0"
+        animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
+      </a-sphere>
 
-    <!-- Sun -->
-    <a-sphere
-      color="yellow"
-      radius="0.5"
-      position="0 0.5 0" <!-- Slightly above the plane -->
-      animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
-    </a-sphere>
+      <!-- Earth -->
+      <a-sphere
+        color="blue"
+        radius="0.1"
+        position="1 0.3 0"
+        animation="property: position; to: 1 0.3 1; loop: true; dur: 8000">
+      </a-sphere>
 
-    <!-- Earth -->
-    <a-sphere
-      color="blue"
-      radius="0.1"
-      position="1 0.3 0" <!-- Adjusted position -->
-      animation="property: position; to: 1 0.3 1; loop: true; dur: 8000">
-    </a-sphere>
+      <!-- Mars -->
+      <a-sphere
+        color="red"
+        radius="0.15"
+        position="1.5 0.4 0"
+        animation="property: position; to: 1.5 0.4 1.5; loop: true; dur: 10000">
+      </a-sphere>
+    </a-marker>
 
-    <!-- Mars -->
-    <a-sphere
-      color="red"
-      radius="0.15"
-      position="1.5 0.4 0" 
-      animation="property: position; to: 1.5 0.4 1.5; loop: true; dur: 10000">
-    </a-sphere>
-
-    <!-- AR Camera: Removed the 'enabled' attribute for look-controls -->
-    <a-camera position="0 0 0" look-controls></a-camera>
+    <!-- AR Camera -->
+    <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
